# fast_muscles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arap.h  elastic.h  exact.cpp  famu.cpp  fd_famu.cpp  finitedifference.cpp  kmeans.h  main.cpp  matlabUtilities.h  mesh.h  newsolvertest.cpp  redArap.h  redFD.cpp  redSolver.h  redUArap.cpp  redUArap.h  reduced.cpp  solver.h  unred_elastic.h  unreduced.cpp
PreProcessing/: kmeans_clustering.cpp  kmeans_clustering.h  ocv_kmeans_wrapper.cpp  ocv_kmeans_wrapper.h  setup_modes.cpp  setup_modes.h  setup_rotation_cluster.cpp  setup_rotation_cluster.h  setup_skinning_handles.cpp  setup_skinning_handles.h  to_triplets.cpp  to_triplets.h
Scripts/: WTF.eps  alphaplot.m  bicepconsistencytest.sh  derivatives.nb  display_meshes.m  eigenspectrum_plot.m  matlab_siggraph_plotting.m  meshdist.m  meshdist.m~  meshdist.py  meshdistances.m  meshdistances.m~  muscle_waypoint_interpolation.m  nm_vs_preconbfgs.m  t  untitled.fig  viewmusclemeshes.m
Scripts/gavin_matlab/data/big_muscle/: bone_1_I.dmat  bone_2_I.dmat  combined_T.dmat  combined_V.dmat  fiber_directions.dmat  muscle_I.dmat
Scripts/gavin_matlab/data/big_muscle_animation/: big_muscle_unreduced0.dmat  big_muscle_unreduced1.dmat  big_muscle_unreduced10.dmat  big_muscle_unreduced11.dmat  big_muscle_unreduced12.dmat  big_muscle_unreduced13.dmat  big_muscle_unreduced14.dmat  big_muscle_unreduced15.dmat  big_muscle_unreduced16.dmat  big_muscle_unreduced17.dmat  big_muscle_unreduced18.dmat  big_muscle_unreduced19.dmat  big_muscle_unreduced2.dmat  big_muscle_unreduced20.dmat  big_muscle_unreduced21.dmat  big_muscle_unreduced22.dmat  big_muscle_unreduced23.dmat  big_muscle_unreduced24.dmat  big_muscle_unreduced25.dmat  big_muscle_unreduced26.dmat  big_muscle_unreduced27.dmat  big_muscle_unreduced28.dmat  big_muscle_unreduced29.dmat  big_muscle_unreduced3.dmat  big_muscle_unreduced30.dmat  big_muscle_unreduced31.dmat  big_muscle_unreduced32.dmat  big_muscle_unreduced33.dmat  big_muscle_unreduced34.dmat  big_muscle_unreduced35.dmat  big_muscle_unreduced36.dmat  big_muscle_unreduced37.dmat  big_muscle_unreduced38.dmat  big_muscle_unreduced39.dmat  big_muscle_unreduced4.dmat  big_muscle_unreduced40.dmat  big_muscle_unreduced41.dmat  big_muscle_unreduced42.dmat  big_muscle_unreduced43.dmat  (+11 more)
Scripts/gavin_matlab/scripts/: big_muscle_animation.m  coarse_biceps.m  fitTexCoords3D.m  make_animation.m  realistic_bisceps_animation.m  run_all_animations.m  simple_joint_animation.m  simple_joint_image.m  simple_shoulder_animation.m
cmake/: FindGAUSS.cmake  FindLIBIGL.cmake  FindMKL.cmake
exact/: acap_solve.cpp  acap_solve.h  bone_vertices_projection.cpp  bone_vertices_projection.h  construct_kkt_system.cpp  construct_kkt_system.h  linesearch.cpp  linesearch.h  muscle_energy_gradient.cpp  muscle_energy_gradient.h  newton_solve.cpp  newton_solve.h  passlambda.cpp  passlambda.h  project_bone_F.cpp  project_bone_F.h  read_config_file.cpp  read_config_files.h  setup_hessian_modes.cpp  setup_hessian_modes.h  setup_store.cpp  setup_store.h  stablenh_energy_gradient.cpp  stablenh_energy_gradient.h  store.h  woodbury.cpp  woodbury.h
famu/: FullSolver.h  SolverPardiso.h  acap_solve_energy_gradient.cpp  acap_solve_energy_gradient.h  bfgs_solver.h  bone_elem_def_grad_projection_matrix.cpp  bone_elem_def_grad_projection_matrix.h  construct_kkt_system.cpp  construct_kkt_system.h  cont_to_discont_tets.cpp  cont_to_discont_tets.h  dfmatrix_vector_swap.cpp  dfmatrix_vector_swap.h  discontinuous_centroids_matrix.cpp  discontinuous_centroids_matrix.h  discontinuous_edge_vectors.cpp  discontinuous_edge_vectors.h  draw_disc_mesh_functions.cpp  draw_disc_mesh_functions.h  fixed_bones_projection_matrix.h  full_solver.h  get_min_max_verts.cpp  get_min_max_verts.h  joint_constraint_matrix.h  muscle_energy_gradient.cpp  muscle_energy_gradient.h  newton_solver.cpp  newton_solver.h  read_config_file.cpp  read_config_files.h  setup_hessian_modes.cpp  setup_hessian_modes.h  setup_store.cpp  setup_store.h  stablenh_energy_gradient.cpp  stablenh_energy_gradient.h  store.h  vertex_bc.cpp  vertex_bc.h
input/: input.json
muscle_gen/: CMakeLists.txt  README.md
muscle_gen/data/: blender_export_intstructions.txt
muscle_gen/data/cartoon_skeleton/: config.json
muscle_gen/data/cartoon_skeleton/objs/: head.mtl
muscle_gen/data/leg/: config.json  muscles.mtl
muscle_gen/data/realistic_arm/surface_mesh/: realistic_arm.blend  realistic_arm.blend1
muscle_gen/data/realistic_biceps/: config.json
muscle_gen/data/realistic_biceps_with_pseudo_bone/: config.json
muscle_gen/data/realistic_upper_arm/: config.json
muscle_gen/data/realistic_upper_arm_hires/: config.json
muscle_gen/data/realistic_upper_arm_pecs_trap_coarse/: config.json
muscle_gen/data/realistic_upper_arm_pecs_traps/: config.json
muscle_gen/data/realistic_upper_arm_sternum/: config.json
muscle_gen/data/realistic_upper_arm_vismay/: config.json
muscle_gen/data/siggraph_muscle/: config.json  siggraph_muscle.blend  siggraph_muscle.blend1
muscle_gen/data/simple_joint/: config.json  simple_joint.blend
muscle_gen/data/simple_joint/generated_files/: bottom_bone_bone_indices.dmat  bottom_bone_split_tet_mesh_T.dmat  bottom_bone_split_tet_mesh_V.dmat  combined_fiber_directions.dmat  joint_indices.dmat  muscle_muscle_indices.dmat  muscle_split_tet_mesh_T.dmat  muscle_split_tet_mesh_V.dmat  tet_mesh_T.dmat  tet_mesh_V.dmat  top_bone_bone_indices.dmat  top_bone_split_tet_mesh_T.dmat  top_bone_split_tet_mesh_V.dmat
muscle_gen/data/simple_muscle/: config.json
muscle_gen/data/simple_muscle/objs/: simple_muscle.blend
muscle_gen/data/simple_muscle_bipennate2/: config.json  simple_muscle_bipennate2.blend
muscle_gen/data/simple_muscle_bipennate2/objs/: bone_2.mtl
muscle_gen/data/simple_shoulder/: config.json  simple_shoulder.blend1
muscle_gen/src/: Body.cpp  Body.h  MeshTypes.h  main.cpp  viewer.h
playback/: CMakeLists.txt  main.cpp
playback/cmake/: FindLIBIGL.cmake  FindSUITESPARSE.cmake
pose-mesh-cheat/: CMakeLists.txt  elephant.cpp  main.cpp
(+166 files in other folders)
